deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghtracker
  labels:
    app.kubernetes.io/name: ghtracker
spec:
  selector:
    app.kubernetes.io/name: ghtracker
  ports:
    - name: http
      port: 80
      targetPort: http
